fix: Wave edge decor gap

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -992,6 +992,14 @@ textarea.custom-form-input {
   margin-top: 52px;
 }
 
+.-mt-px {
+  margin-top: -1px;
+}
+
+.-mb-px {
+  margin-bottom: -1px;
+}
+
 .box-border {
   box-sizing: border-box;
 }
